# tokenizers_evaluation

./: .gitignore  CLAUDE.md  GUIDE.md  PIPELINE.md  README.md  pyproject.toml
.claude/skills/arabic-token-eval/: SKILL.md
.claude/skills/araroopat/: SKILL.md
.claude/skills/token-morph-metrics/: SKILL.md
configs/: base.yaml
configs/experiments/: ACVA_completion_loss_ablation.yaml  ACVA_split_and_completion_ablation.yaml  ACVA_split_ratio_ablation.yaml  ACVA_top_tokenizers_benchmark_sweep.yaml  _smoke_3phase.yaml  all_tokenizers_benchmark_sweep.yaml  arabic_exam_postfix_bpe_50k.yaml  arabic_exam_postfix_native_no_sft.yaml  arabic_exam_postfix_native_with_sft.yaml  araroopat_3phase_with_sft.yaml  araroopat_benchmark_sweep.yaml  araroopat_intrinsic.yaml  benchmark_sweep.yaml  bpe_32k_generation.yaml  complete_sweep.yaml  full_sweep.yaml  native_llama_3phase_no_sft.yaml  native_llama_3phase_with_sft.yaml  native_llama_no_sft_alghafa_postfix.yaml  native_llama_no_sft_benchmark_sweep.yaml  native_llama_no_sft_clean_latin_benchmark_sweep.yaml  native_llama_with_sft_benchmark_sweep.yaml  native_llama_with_sft_clean_latin_benchmark_sweep.yaml  sample_experiment.yaml  sample_full.yaml
configs/models/: llama_3_2_1b.yaml
configs/tasks/: acva.yaml  alghafa.yaml  arabic_exam.yaml  culture_arabic_mmlu.yaml  question_answering.yaml  text_generation.yaml
configs/tokenizers/: araroopat.yaml  bpe.yaml  char_jaber.yaml  character_bert.yaml  charformer.yaml  farasa_character_bert.yaml  morpho_bpe.yaml  native_llama.yaml  wordpiece.yaml
notebooks/: benchmark_analysis.ipynb
scripts/: _smoke_farasa_charbert.py  compare_results.py  evaluate_intrinsic.py  recompute_mei.py  run_experiment.py  smoke_arabic_exam_parser.py  smoke_araroopat.py  smoke_clean_latin_rows.py  smoke_morph_metrics.py  train_tokenizer.py
src/arabic_eval/: config.py  registry.py
src/arabic_eval/data/: answer_only_masking.py  collation.py  finetune_corpora.py  loader.py  preprocessing.py
src/arabic_eval/evaluation/: evaluator.py  intrinsic_metrics.py  metrics.py  reporter.py
src/arabic_eval/models/: __init__.py  base.py  llama_adapter.py
src/arabic_eval/models/embeddings/: char_jaber_embed.py  character_cnn.py  charformer_embed.py  standard.py
src/arabic_eval/pipeline/: experiment.py
src/arabic_eval/tasks/: __init__.py  base.py  lighteval_benchmarks.py  question_answering.py  text_generation.py
src/arabic_eval/tasks/lighteval/: __init__.py  acva.py  alghafa.py  arabic_exam.py  base.py  culture_arabic_mmlu.py  utils.py
src/arabic_eval/tokenizers/: __init__.py  araroopat.py  araroopat_backend.py  araroopat_bridge.py  araroopat_camel_server.py  base.py  bpe.py  char_jaber.py  character_bert.py  charformer.py  farasa_character_bert.py  intrinsic_metrics.py  morpho_bpe.py  morphological_utils.py  native_llama.py  wordpiece.py
src/arabic_eval/tokenizers/utils/: arabic_text.py
src/arabic_eval/training/: callbacks.py  freezing.py  phases.py  trainer.py
src/arabic_eval/utils/: io.py  logging.py  reproducibility.py
tests/: test_alghafa_parser.py  test_arabic_exam_parser.py  test_clean_latin_rows.py  test_e2e_sweep.py  test_eval_full.py  test_finetune_corpora.py  test_freezing.py  test_mei.py  test_morphological_metrics.py  test_phases.py  test_pmi_normalization.py
